--- a/PhotoPromoApp/client/package.json
+++ b/PhotoPromoApp/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "proxy": "https://localhost:5001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
